syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.a.eye.skywalking.network.grpc";

import "Spans.proto";

service SpanStorageService {
    rpc storageACKSpan (stream AckSpan) returns (SendResult) {
    };
    rpc storageRequestSpan (stream RequestSpan) returns (SendResult) {
    };
}

message SendResult {
    // 0 成功  1 失败
    bool result = 1;
}
